# Simple-Ray-Casting

./: .dockerignore  .gitignore  CI-CD-GUIDE.md  CanvasRayTracer.py  Dockerfile  Main.py  Makefile  README.md  RayCastTest.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
tests/: __init__.py  conftest.py  test_raycast.py
